--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lan": "expo start --lan",
+    "off": "expo start --offline"
   },
   "dependencies": {
     "expo": "~48.0.18",
