--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "expo": "~48.0.18",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-linear-gradient": "~12.1.2"
+    "react-native-pager-view": "6.1.2",
+    "react-native-rapi-ui": "^0.2.1",
+    "react-native-safe-area-context": "4.5.0",
+    "expo-font": "~11.1.1",
+    "@expo/vector-icons": "^13.0.0",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
