--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,13 @@
     "off": "expo start --offline"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-picker/picker": "^2.4.10",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
+    "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
@@ -19,10 +25,7 @@
     "react-native": "0.71.8",
     "react-native-pager-view": "6.1.2",
     "react-native-rapi-ui": "^0.2.1",
-    "react-native-safe-area-context": "4.5.0",
-    "expo-font": "~11.1.1",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-asset": "~8.9.1"
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
