--- a/front/package.json
+++ b/front/package.json
@@ -8,11 +8,12 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lan": "expo start --lan",
-    "off": "expo start --offline"
+    "off": "expo start --offline",
+    "apk": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.18",
