--- a/front/package.json
+++ b/front/package.json
@@ -30,7 +30,9 @@
     "react-native-pager-view": "6.1.2",
     "react-native-rapi-ui": "^0.2.1",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-print": "~12.2.1",
+    "expo-sharing": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
