--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "la-polar-app",
+  "name": "spider-man-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-picker/picker": "2.4.8",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
@@ -25,11 +24,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-pager-view": "6.1.2",
     "react-native-rapi-ui": "^0.2.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0"
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
